--- a/app/src/main/res/layout/caregivermain.xml
+++ b/app/src/main/res/layout/caregivermain.xml
@@ -1,11 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+xmlns:app="http://schemas.android.com/apk/res-auto"
+android:orientation="vertical" android:layout_width="match_parent"
+android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="StUFFFFFF WORK" />
+<ImageButton
+    android:id="@+id/imageButton9"
+    android:layout_width="129dp"
+    android:layout_height="wrap_content"
+    app:srcCompat="@drawable/contact" />
+
+<ImageButton
+    android:id="@+id/imageButton6"
+    android:layout_width="128dp"
+    android:layout_height="wrap_content"
+    app:srcCompat="@drawable/call" />
+
+<ImageButton
+    android:id="@+id/imageButton11"
+    android:layout_width="129dp"
+    android:layout_height="wrap_content"
+    app:srcCompat="@drawable/message" />
+
+<ImageButton
+    android:id="@+id/imageButton12"
+    android:layout_width="128dp"
+    android:layout_height="55dp"
+    app:srcCompat="@drawable/location" />
+
+<ImageButton
+    android:id="@+id/imageButton16"
+    android:layout_width="129dp"
+    android:layout_height="60dp"
+    app:srcCompat="@drawable/activity" />
+
 </LinearLayout>
