--- a/app/src/main/res/layout/messagesent.xml
+++ b/app/src/main/res/layout/messagesent.xml
@@ -3,4 +3,9 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/MessageSent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="The Message have been sent!" />
 </LinearLayout>
