--- a/app/src/main/res/layout/caregivermain.xml
+++ b/app/src/main/res/layout/caregivermain.xml
@@ -4,34 +4,39 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 android:orientation="vertical" android:layout_width="match_parent"
 android:layout_height="match_parent">
 
-<ImageButton
-    android:id="@+id/imageButton9"
-    android:layout_width="129dp"
-    android:layout_height="wrap_content"
-    app:srcCompat="@drawable/contact" />
+    <ImageButton
+        android:id="@+id/contact"
+        android:layout_width="129dp"
+        android:layout_height="wrap_content"
+        android:onClick="onButtonClick"
+        app:srcCompat="@drawable/contact" />
 
-<ImageButton
-    android:id="@+id/imageButton6"
-    android:layout_width="128dp"
-    android:layout_height="wrap_content"
-    app:srcCompat="@drawable/call" />
+    <ImageButton
+        android:id="@+id/call"
+        android:layout_width="128dp"
+        android:layout_height="wrap_content"
+        android:onClick="onButtonClick"
+        app:srcCompat="@drawable/call" />
 
-<ImageButton
-    android:id="@+id/imageButton11"
-    android:layout_width="129dp"
-    android:layout_height="wrap_content"
-    app:srcCompat="@drawable/message" />
+    <ImageButton
+        android:id="@+id/message"
+        android:layout_width="129dp"
+        android:layout_height="wrap_content"
+        android:onClick="onButtonClick"
+        app:srcCompat="@drawable/message" />
 
-<ImageButton
-    android:id="@+id/imageButton12"
-    android:layout_width="128dp"
-    android:layout_height="55dp"
-    app:srcCompat="@drawable/location" />
+    <ImageButton
+        android:id="@+id/location"
+        android:layout_width="128dp"
+        android:layout_height="55dp"
+        android:onClick="onButtonClick"
+        app:srcCompat="@drawable/location" />
 
-<ImageButton
-    android:id="@+id/imageButton16"
-    android:layout_width="129dp"
-    android:layout_height="60dp"
-    app:srcCompat="@drawable/activity" />
+    <ImageButton
+        android:id="@+id/activity"
+        android:layout_width="129dp"
+        android:layout_height="60dp"
+        android:onClick="onButtonClick"
+        app:srcCompat="@drawable/activity" />
 
 </LinearLayout>
