--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,11 @@
 
     <Button
         android:id="@+id/Blogin"
-        android:layout_width="0dp"
+        android:layout_width="368dp"
         android:layout_height="48dp"
         android:onClick="onButtonClick"
-        android:text="Log in"
+        android:text="Login"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -46,5 +45,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintBottom_toTopOf="@+id/editText5" />
+
+    <Button
+        android:id="@+id/CareLogin"
+        android:layout_width="368dp"
+        android:layout_height="49dp"
+        android:onClick="onButtonClick"
+        android:text="Caregiver Login"
+        app:layout_constraintLeft_toLeftOf="@+id/Blogin"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.439"
+        app:layout_constraintRight_toRightOf="@+id/Blogin" />
 
 </android.support.constraint.ConstraintLayout>
