--- a/app/src/main/res/layout/caregivermain.xml
+++ b/app/src/main/res/layout/caregivermain.xml
@@ -1,41 +1,164 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-android:orientation="vertical" android:layout_width="match_parent"
-android:layout_height="match_parent">
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:weightSum="1"
+    tools:layout_editor_absoluteY="81dp"
+    tools:layout_editor_absoluteX="0dp">
+
+    <TextView
+        android:id="@+id/hi1"
+        android:layout_width="384dp"
+        android:layout_height="26dp"
+        android:text="Hi Felicia!"
+        android:textAppearance="@android:style/TextAppearance.Material.Large"
+        tools:layout_conversion_absoluteX="0dp"
+        tools:layout_conversion_absoluteY="0dp"
+        tools:layout_conversion_absoluteWidth="384dp"
+        tools:layout_conversion_absoluteHeight="26dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/contact"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_bias="1.0" />
 
     <ImageButton
         android:id="@+id/contact"
-        android:layout_width="129dp"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/contact" />
+        android:layout_width="94dp"
+        android:layout_height="94dp"
+        android:background="@drawable/contact"
+        android:onClick="onButtonClick"
+        tools:layout_conversion_absoluteX="0dp"
+        tools:layout_conversion_absoluteY="26dp"
+        tools:layout_conversion_absoluteWidth="94dp"
+        tools:layout_conversion_absoluteHeight="94dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/call"
+        app:layout_constraintTop_toBottomOf="@+id/hi1"
+        app:layout_constraintHorizontal_bias="0.175" />
 
     <ImageButton
         android:id="@+id/call"
-        android:layout_width="128dp"
-        android:layout_height="wrap_content"
+        android:layout_width="94dp"
+        android:layout_height="94dp"
+        android:background="@drawable/call"
         android:onClick="onButtonClick"
-        app:srcCompat="@drawable/call" />
+        tools:layout_conversion_absoluteX="0dp"
+        tools:layout_conversion_absoluteY="120dp"
+        tools:layout_conversion_absoluteWidth="94dp"
+        tools:layout_conversion_absoluteHeight="94dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/message"
+        app:layout_constraintTop_toBottomOf="@+id/contact"
+        app:layout_constraintHorizontal_bias="0.175" />
 
     <ImageButton
         android:id="@+id/message"
-        android:layout_width="129dp"
-        android:layout_height="wrap_content"
+        android:layout_width="94dp"
+        android:layout_height="94dp"
+        android:background="@drawable/message"
         android:onClick="onButtonClick"
-        app:srcCompat="@drawable/message" />
+        tools:layout_conversion_absoluteX="0dp"
+        tools:layout_conversion_absoluteY="214dp"
+        tools:layout_conversion_absoluteWidth="94dp"
+        tools:layout_conversion_absoluteHeight="94dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/location"
+        app:layout_constraintTop_toBottomOf="@+id/call"
+        app:layout_constraintHorizontal_bias="0.175" />
 
     <ImageButton
         android:id="@+id/location"
-        android:layout_width="128dp"
-        android:layout_height="55dp"
+        android:layout_width="94dp"
+        android:layout_height="94dp"
+        android:background="@drawable/location"
         android:onClick="onButtonClick"
-        app:srcCompat="@drawable/location" />
+        tools:layout_conversion_absoluteX="0dp"
+        tools:layout_conversion_absoluteY="308dp"
+        tools:layout_conversion_absoluteWidth="94dp"
+        tools:layout_conversion_absoluteHeight="94dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/message"
+        app:layout_constraintHorizontal_bias="0.175" />
 
-    <ImageButton
-        android:id="@+id/activity"
-        android:layout_width="129dp"
-        android:layout_height="60dp"
-        android:onClick="onButtonClick"
-        app:srcCompat="@drawable/activity" />
+    <CheckBox
+        android:id="@+id/checkBox1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:checked="true"
+        android:text="Bathe"
+        android:textAppearance="@android:style/TextAppearance.Material.Medium"
+        app:layout_constraintBottom_toTopOf="@+id/checkBox2"
+        app:layout_constraintLeft_toRightOf="@+id/contact"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText2" />
 
-</LinearLayout>
+    <EditText
+        android:id="@+id/editText2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Past Activities"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/contact"
+        app:layout_constraintBottom_toTopOf="@+id/checkBox1"
+        app:layout_constraintTop_toBottomOf="@+id/hi1"
+        app:layout_constraintHorizontal_bias="1.0" />
+
+    <CheckBox
+        android:id="@+id/checkBox2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:checked="true"
+        android:text="Walk"
+        android:textAppearance="@android:style/TextAppearance.Material.Medium"
+        app:layout_constraintBottom_toTopOf="@+id/checkBox3"
+        app:layout_constraintHorizontal_bias="0.485"
+        app:layout_constraintLeft_toRightOf="@+id/call"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/checkBox1" />
+
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/guideline"
+        app:layout_constraintGuide_begin="20dp"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="20dp" />
+
+    <CheckBox
+        android:id="@+id/checkBox3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:checked="true"
+        android:text="Pet the dog"
+        android:textAppearance="@android:style/TextAppearance.Material.Medium"
+        app:layout_constraintBottom_toTopOf="@+id/checkBox4"
+        app:layout_constraintHorizontal_bias="0.704"
+        app:layout_constraintLeft_toRightOf="@+id/call"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />
+
+    <CheckBox
+        android:id="@+id/checkBox4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cook"
+        android:textAppearance="@android:style/TextAppearance.Material.Medium"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintLeft_toRightOf="@+id/message"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/checkBox3" />
+
+</android.support.constraint.ConstraintLayout>
